# rssh-agent

./: .gitignore  .mcp.json  CLAUDE.md  Cargo.toml  DEBIAN_PACKAGING.md  IMPLEMENTATION_STATUS.md  IMPORT_FEATURE_SUMMARY.md  PERFORMANCE_ANALYSIS.md  PERFORMANCE_REPORT.md  README.md  SYSTEMD_ACTIVATION.md  TESTING.md  build-deb.sh  checklist.md  debug-systemd-minimal.sh  debug-systemd-socket.sh  debug_cbor.rs  prompts.md  rssh-agent.service  rssh-agent.socket  spec.md  test-agent.sh  test-all.sh  test-askpass.sh  test-config.rs  test-daemon.sh  test-dev-service.sh  test-direct-daemon.sh  test-final-systemd-fix.sh  test-fix-verification.sh  test-fixes.sh  test-full.sh  test-init.sh  test-rsa-signing.sh  test-signal-handling.sh  test-simple-fixes.sh  test-socket-communication.sh  test-systemd-activation.sh  test-systemd-fix.sh  test-systemd-packaging.sh  (+21 more)
.cargo/: config.toml
.claude/: settings.local.json
.serena/: project.yml
.serena/memories/: code_style_conventions.md  project_overview.md  suggested_commands.md  task_completion_checklist.md
crates/rssh-cli/: Cargo.toml
crates/rssh-cli/src/: main.rs
crates/rssh-cli/src/commands/: control.rs  daemon.rs  import.rs  init.rs  manage.rs  mod.rs
crates/rssh-cli/src/tui/: mod.rs
crates/rssh-cli/src/tui/modals/: auth.rs  confirmation.rs  create_key.rs  delete_confirm.rs  description.rs  expiration.rs  import_key.rs  key_password.rs  mod.rs  password.rs  remove_pwd.rs  set_password.rs
crates/rssh-cli/src/tui/widgets/: mod.rs  modal_frame.rs  selector.rs  text_input.rs
crates/rssh-core/: Cargo.toml
crates/rssh-core/src/: config.rs  error.rs  fs_policy.rs  kdf.rs  keyfile.rs  lib.rs  openssh.rs  optimized_ram_store.rs  perf_cache.rs  ram_store.rs  wire.rs
crates/rssh-daemon/: Cargo.toml
crates/rssh-daemon/benches/: crypto_bench.rs  daemon_bench.rs  quick_bench.rs  storage_bench.rs
crates/rssh-daemon/src/: agent.rs  daemon.rs  dbus_notifications.rs  extensions.rs  key_utils.rs  lib.rs  optimized_socket.rs  prompt.rs  signing.rs  socket.rs  systemd.rs
crates/rssh-daemon/src/extensions/: constraints.rs  control.rs  import.rs  keys.rs  mod.rs
crates/rssh-daemon/tests/: comment_extraction_test.rs  e2e_test.rs  extensions_test.rs  integration_test.rs  performance_integration_test.rs  tui_integration_test.rs
crates/rssh-daemon/tests/mocks/: 04_sign_request.request  README.md
crates/rssh-proto/: Cargo.toml
crates/rssh-proto/src/: cbor.rs  lib.rs  messages.rs  wire.rs
crates/rssh-tui/: Cargo.toml
crates/rssh-tui/src/: lib.rs
crates/rssh-types/: Cargo.toml
crates/rssh-types/src/: lib.rs
tests/: capture_manage_mocks.sh  create_manage_response_mocks.py  create_mock_data  create_mock_data.rs  generate_mocks.sh  record_mocks.sh  test_cbor_parsing.sh  test_final_integration.sh  test_real_tui_flow.sh  test_tui_integration.sh  update_mocks_namespace.py  update_response_mocks.py
tests/mocks/: 02_list_one_key.response  04_sign_request.response  05_extension_list.request  06_manage_list.request  06_manage_list.response  07_manage_add.request  07_manage_add.response  08_manage_remove.request  08_manage_remove.response  09_manage_list_with_keys.response
tmp/: data_to_sign.txt  init_askpass.sh  test-agent.sh  test-daemon.sh  test-daemon2.sh  test-full.sh  test-init.sh  test-manage.sh  test-signing.sh  test-ssh-auth.sh  test_data  test_key.pub  test_key2  test_key2.pub
tmp/.ssh/rssh-agent/: config.json
tmp/.ssh/rssh-agent-test/: config.json
tmp/ssh_test/: authorized_keys  ssh_host_ed25519_key.pub  ssh_host_rsa_key.pub  sshd_config
