[package]
name = "rssh-agent"
description = "Rust SSH-Agent"
version = "0.1.0"
edition = "2024"
license = "MIT OR Apache-2.0"

[workspace]
members = [
    "crates/rssh-types",
    "crates/rssh-core",
    "crates/rssh-proto",
    "crates/rssh-daemon",
    "crates/rssh-cli",
]
default-members = ["crates/rssh-cli"]
resolver = "2"

[package.metadata.deb]
maintainer = "Volodymyr Bulyha <zero@13w.me>"
depends = "$auto, systemd (>= 245)"
assets = [
    ["target/release/rssh-agent", "/usr/bin/", "755"],
    ["rssh-agent.service", "usr/lib/systemd/user/", "644"],
    ["rssh-agent.socket", "usr/lib/systemd/user/", "644"],
]

[workspace.package]
version = "0.1.0"
edition = "2024"
rust-version = "1.89"
authors = ["rssh-agent contributors"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/example/rssh-agent"

[workspace.dependencies]
# Internal crates
rssh-types = { path = "crates/rssh-types" }
rssh-core = { path = "crates/rssh-core" }
rssh-proto = { path = "crates/rssh-proto" }
rssh-daemon = { path = "crates/rssh-daemon" }
rssh-cli = { path = "crates/rssh-cli" }

# External dependencies
tokio = { version = "1.47", features = ["full"] }
clap = { version = "4.5", features = ["derive", "env"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
thiserror = "2.0"
anyhow = "1.0"
argon2 = "0.5"
chacha20poly1305 = "0.10"
rand = "0.9"
rand_chacha = "0.9"
rand_core = "0.9.3"
zeroize = { version = "1.8", features = ["derive"] }
ssh-key = { version = "0.6", features = ["encryption", "ed25519", "rsa"] }
ratatui = { version = "0.29", default-features = false, features = ["crossterm"] }
crossterm = "0.29"
rpassword = "7.4"
ciborium = "0.2"
nix = { version = "0.30", features = ["process", "signal", "user", "fs", "socket", "resource", "mman"] }
tempfile = "3.22"
assert_cmd = "2.0"
predicates = "3.1"
base64 = "0.22"
sha2 = "0.10"
hex = "0.4"
chrono = { version = "0.4", features = ["serde"] }
atty = "0.2"
libc = "0.2"

[build-dependencies]
cargo-deb = "3"

[profile.release]
lto = true
codegen-units = 1
opt-level = 3
strip = true

[profile.dev]
opt-level = 0
debug = true
