[package]
name = "rssh-cli"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true

[[bin]]
name = "rssh-agent"
path = "src/main.rs"

[dependencies]
rssh-core = { workspace = true }
rssh-proto = { workspace = true }
rssh-daemon = { workspace = true }
rssh-tui = { workspace = true, optional = true }
clap = { workspace = true }
clap_complete = "4.5"
clap_mangen = "0.2"
tokio = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
ciborium = { workspace = true }
ssh-key = { workspace = true }
base64 = { workspace = true }
hex = { workspace = true }

[dev-dependencies]
assert_cmd = { workspace = true }
predicates = { workspace = true }
tempfile = { workspace = true }

[features]
default = ["tui"]
tui = ["dep:rssh-tui"]
