[package]
name = "rssh-cli"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
description = "Secure SSH agent daemon with enhanced security features"

[[bin]]
name = "rssh-agent"
path = "src/main.rs"

[dependencies]
rssh-types = { workspace = true }
rssh-core = { workspace = true }
rssh-proto = { workspace = true }
rssh-daemon = { workspace = true }
clap = { workspace = true }
clap_complete = "4.5"
clap_mangen = "0.2"
tokio = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
ciborium = { workspace = true }
ssh-key = { workspace = true }
base64 = { workspace = true }
hex = { workspace = true }
nix = { workspace = true }
rand = { workspace = true }
libc = { workspace = true }
ratatui = { workspace = true, optional = true }
crossterm = { workspace = true, optional = true }
chrono = { workspace = true, optional = true }

[dev-dependencies]
assert_cmd = { workspace = true }
predicates = { workspace = true }
tempfile = { workspace = true }

[features]
default = ["tui"]
tui = ["dep:ratatui", "dep:crossterm", "dep:chrono"]

[package.metadata.deb]
name = "rssh-agent"
maintainer = "rssh-agent contributors <maintainer@example.com>"
copyright = "2024, rssh-agent contributors"
license-file = ["../../LICENSE", "4"]
extended-description = """\
rssh-agent is a drop-in replacement for OpenSSH's ssh-agent with enhanced
security features including:

 * Encrypted key storage with master password protection
 * Memory protection and zeroization of secrets
 * Terminal user interface for key management
 * Full OpenSSH agent protocol compatibility
 * Per-user systemd service integration

This package provides secure SSH authentication with enhanced key protection
and management capabilities while maintaining full compatibility with
existing SSH clients and workflows."""
depends = "$auto, systemd (>= 252)"
conflicts = "rssh-cli"
replaces = "rssh-cli"
suggests = "openssh-client"
section = "net"
priority = "optional"
assets = [
    ["target/release/rssh-agent", "usr/bin/", "755"],
    ["../../rssh-agent.service", "usr/lib/systemd/user/", "644"],
    ["../../rssh-agent.socket", "usr/lib/systemd/user/", "644"],
]
conf-files = []
