[package]
name = "rssh-core"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
thiserror = { workspace = true }
anyhow = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
argon2 = { workspace = true }
chacha20poly1305 = { workspace = true }
rand = { workspace = true }
rand_chacha = { workspace = true }
zeroize = { workspace = true }
ssh-key = { workspace = true }
base64 = { workspace = true }
sha2 = { workspace = true }
hex = { workspace = true }
chrono = { workspace = true }
nix = { workspace = true }
tracing = { workspace = true }
libc = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }
