[package]
name = "rssh-core"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "Core cryptography, encrypted key storage, and RAM key management for rssh-agent"

[dependencies]
rssh-types = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
argon2 = { workspace = true }
chacha20poly1305 = { workspace = true }
rand = { workspace = true }
rand_chacha = { workspace = true }
rand_core = { workspace = true }
zeroize = { workspace = true }
ssh-key = { workspace = true }
base64 = { workspace = true }
sha2.workspace = true
hex = { workspace = true }
chrono = { workspace = true }
nix = { workspace = true }
tracing = { workspace = true }
libc = { workspace = true }
tokio = { workspace = true, features = ["time", "rt", "macros"] }
parking_lot = "0.12"

[dev-dependencies]
tempfile = { workspace = true }
parking_lot = "0.12"
sha2 = "0.10"
