[package]
name = "rssh-daemon"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
rssh-core = { workspace = true }
rssh-proto = { workspace = true }
tokio = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
nix = { workspace = true }
rpassword = { workspace = true }
zeroize = { workspace = true }
atty = { workspace = true }
libc = { workspace = true }
rand = { workspace = true }
sha2 = { workspace = true }
hex = { workspace = true }
ed25519-dalek = "2.1"
rsa = "0.9"
ciborium = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }
hex = "0.4"
tokio-test = "0.4"
