[package]
name = "rssh-daemon"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "Async SSH agent daemon with hardened memory management and socket handling"

[dependencies]
rssh-types = { workspace = true }
rssh-core = { workspace = true }
rssh-proto = { workspace = true }
tokio = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
nix = { workspace = true }
rpassword = { workspace = true }
zeroize = { workspace = true }
libc = { workspace = true }
rand = { workspace = true }
rand_core = { workspace = true }
sha2 = { workspace = true }
hex = { workspace = true }
ed25519-dalek = "2.2"
rsa = "0.9"
ciborium = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
chrono = { workspace = true }
base64 = { workspace = true }
argon2.workspace = true
ssh-key = { workspace = true }
parking_lot = "0.12.4"
uuid = "1.18.1"
zbus = { workspace = true }
tokio-stream = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }
hex = "0.4"
tokio-test = "0.4"
criterion = { version = "0.7", features = ["html_reports"] }

[[bench]]
name = "crypto_bench"
harness = false

[[bench]]
name = "daemon_bench"
harness = false

[[bench]]
name = "storage_bench"
harness = false

[[bench]]
name = "quick_bench"
harness = false
