[package]
name = "rssh-proto"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
rssh-core = { workspace = true }
thiserror = { workspace = true }
serde = { workspace = true }
ciborium = { workspace = true }
ssh-key = { workspace = true }
tracing = { workspace = true }
zeroize = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }
