[package]
name = "rssh-proto"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "SSH wire protocol and custom CBOR extensions for rssh-agent"

[dependencies]
rssh-types = { workspace = true }
rssh-core = { workspace = true }
thiserror = { workspace = true }
serde = { workspace = true }
ciborium = { workspace = true }
ssh-key = { workspace = true }
tracing = { workspace = true }
zeroize = { workspace = true }
serde_json.workspace = true

[dev-dependencies]
tempfile = { workspace = true }
