[package]
name = "rssh-types"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "Shared protocol and domain types for rssh-agent"

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
